--- a/src/GradeNotifications/app/src/main/res/layout/recyclerview_item.xml
+++ b/src/GradeNotifications/app/src/main/res/layout/recyclerview_item.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="horizontal"
     tools:context=".MainActivity">
 
@@ -11,11 +11,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/subject"
-        android:textSize="32sp"/>
+        android:textSize="15sp"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/grade"
-        android:textSize="32sp"/>
+        android:textSize="15sp"/>
 
 </LinearLayout>
