--- a/src/GradeNotifications/app/src/main/res/layout/recyclerview_item.xml
+++ b/src/GradeNotifications/app/src/main/res/layout/recyclerview_item.xml
@@ -8,14 +8,17 @@
     tools:context=".MainActivity">
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_weight="11"
+        android:layout_height="60dp"
         android:id="@+id/subject"
-        android:textSize="15sp"/>
+        android:textSize="20dp"
+        android:paddingLeft="15dp"/>
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_weight="4"
+        android:layout_height="60dp"
         android:id="@+id/grade"
-        android:textSize="15sp"/>
+        android:textSize="20dp"/>
 
 </LinearLayout>
